hphp/hack/test/typecheck/lambda/variadics/lambda_unpacked_parameters.php.like_types.exp
File "lambda_unpacked_parameters.php", line 6, characters 14-18:
Invalid argument (Typing[4110])
File "lambda_unpacked_parameters.php", line 6, characters 14-18:
Expected Traversable<_> (it is unpacked with '...')
File "lambda_unpacked_parameters.php", line 3, characters 35-50:
But got dynamic because it is an unenforceable type
File "lambda_unpacked_parameters.php", line 11, characters 14-24:
Invalid argument (Typing[4110])
File "lambda_unpacked_parameters.php", line 11, characters 14-24:
Expected Traversable<_> (it is unpacked with '...')
File "lambda_unpacked_parameters.php", line 9, characters 17-17:
But got int
File "lambda_unpacked_parameters.php", line 15, characters 14-14:
Invalid argument (Typing[4110])
File "lambda_unpacked_parameters.php", line 14, characters 28-29:
Expected string (variadic argument)
File "lambda_unpacked_parameters.php", line 15, characters 14-14:
But got int
File "lambda_unpacked_parameters.php", line 31, characters 14-18:
Invalid argument (Typing[4110])
File "lambda_unpacked_parameters.php", line 31, characters 14-18:
Expected Traversable<_> (it is unpacked with '...')
File "lambda_unpacked_parameters.php", line 3, characters 35-50:
But got dynamic because it is an unenforceable type
File "lambda_unpacked_parameters.php", line 35, characters 28-32:
Invalid argument (Typing[4110])
File "lambda_unpacked_parameters.php", line 35, characters 28-32:
Expected Traversable<int> (it is unpacked with '...')
File "lambda_unpacked_parameters.php", line 3, characters 35-50:
But got dynamic because it is an unenforceable type
File "lambda_unpacked_parameters.php", line 47, characters 12-13:
Was expecting an object but type is unknown (Typing[4297])
File "lambda_unpacked_parameters.php", line 46, characters 18-19:
It is unknown because the type of the lambda parameter could not be determined. Please add a type hint to the parameter
File "lambda_unpacked_parameters.php", line 49, characters 14-17:
Invalid argument (Typing[4110])
File "lambda_unpacked_parameters.php", line 49, characters 14-17:
Expected Traversable<{suggest:mixed}> (it is unpacked with '...')
File "lambda_unpacked_parameters.php", line 3, characters 15-27:
But got dynamic because it is an unenforceable type
File "lambda_unpacked_parameters.php", line 49, characters 14-17:
Invalid argument (Typing[4110])
File "lambda_unpacked_parameters.php", line 49, characters 14-17:
Expected Traversable<mixed> (it is unpacked with '...')
File "lambda_unpacked_parameters.php", line 3, characters 15-27:
But got dynamic because it is an unenforceable type
File "lambda_unpacked_parameters.php", line 49, characters 3-18:
Too few arguments (required 2 but got 0) (Typing[4104])
File "lambda_unpacked_parameters.php", line 46, characters 13-52:
Definition is here
File "lambda_unpacked_parameters.php", line 55, characters 14-17:
Invalid argument (Typing[4110])
File "lambda_unpacked_parameters.php", line 55, characters 14-17:
Expected Traversable<int> (it is unpacked with '...')
File "lambda_unpacked_parameters.php", line 3, characters 15-27:
But got dynamic because it is an unenforceable type
File "lambda_unpacked_parameters.php", line 55, characters 14-17:
Invalid argument (Typing[4110])
File "lambda_unpacked_parameters.php", line 55, characters 14-17:
Expected Traversable<mixed> (it is unpacked with '...')
File "lambda_unpacked_parameters.php", line 3, characters 15-27:
But got dynamic because it is an unenforceable type
File "lambda_unpacked_parameters.php", line 55, characters 3-18:
Too few arguments (required 2 but got 0) (Typing[4104])
File "lambda_unpacked_parameters.php", line 52, characters 13-49:
Definition is here
